# ai-task-orchestra

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py  run_beat.py  run_flower.py  run_worker.py
architecture_docs/: architecture.md  codebaseSummary.md  currentTask.md  projectRoadmap.md  techStack.md
docs/: README.md  api-reference.md  architecture.md  developer-guide.md  templates.md  user-guide.md
src/ai_task_orchestra/: __init__.py  config.py  main.py  worker.py
src/ai_task_orchestra/api/: __init__.py
src/ai_task_orchestra/api/v1/: __init__.py  router.py
src/ai_task_orchestra/api/v1/endpoints/: __init__.py  tasks.py  templates.py
src/ai_task_orchestra/integrations/: __init__.py  ollama.py
src/ai_task_orchestra/services/: __init__.py  task_service.py  template_service.py
templates/: file-processing.yaml  git-script-execution.yaml  ollama-inference.yaml
